--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NETWORK=finney
-DELEGATOR=5DZhYqgHhRPYUHqjaU2gS2LNL7VS8Fb5utxZ7QEkVGqTnmh5
-PROXY_WALLET=black
+DELEGATOR=5GhDziWFX56mTrG8Qgytr5bcPNDKVxnVeWCZt3PC4n59pCCP
+PROXY_WALLET=webgenie
 APPROVER=5FEhWbHyQ16tWwaB3WDM6C4PRUKd9tppQj195vQ2yD8Riyja
