--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NETWORK=finney
-DELEGATOR=5H5yXNvoy6Hucx8AmQuHR7UXEdgrD2tPzZnohJjxP81FrqaQ
-PROXY_WALLET=breo
+DELEGATOR=5FWhdv8o7fGo6yn54qXCn1xTxXsMaNLaotKYzUSG2iZp4tVZ
+PROXY_WALLET=green
 APPROVER=5FEhWbHyQ16tWwaB3WDM6C4PRUKd9tppQj195vQ2yD8Riyja
